--- a/web_pages/Admin.html
+++ b/web_pages/Admin.html
@@ -4,23 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    
-    <div>
-        <h1>Current Accounts</h1>
-        <ol>
-            <li>Suleman</li>
-            <li>Wahab</li>
-        </ol>
+    <div class="container-fluid py-4">
+        <div class="row">
+            <!-- Current Accounts Section -->
+            <div class="col-md-6 mb-4">
+                <div class="card bg-transparent border-light h-100">
+                    <div class="card-body">
+                        <h2 class="card-title text-center mb-4">Current Accounts</h2>
+                        <div class="list-group">
+                            <div class="list-group-item bg-transparent border-light d-flex justify-content-between align-items-center mb-2">
+                                <div>
+                                    <h5 class="mb-1">Suleman Aziz</h5>
+                                    <small>Account Created: May 15, 2025</small>
+                                </div>
+                                <span class="badge bg-success">Active</span>
+                            </div>
+                            <div class="list-group-item bg-transparent border-light d-flex justify-content-between align-items-center mb-2">
+                                <div>
+                                    <h5 class="mb-1">Abdul Wahab</h5>
+                                    <small>Account Created: May 10, 2025</small>
+                                </div>
+                                <span class="badge bg-success">Active</span>
+                            </div>
+                            <div class="list-group-item bg-transparent border-light d-flex justify-content-between align-items-center mb-2">
+                                <div>
+                                    <h5 class="mb-1">Ahmed khan</h5>
+                                    <small>Account Created: May 5, 2025</small>
+                                </div>
+                                <span class="badge bg-danger">Inactive</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Login History Section -->
+            <div class="col-md-6 mb-4">
+                <div class="card bg-transparent border-light h-100">
+                    <div class="card-body">
+                        <h2 class="card-title text-center mb-4">Login History</h2>
+                        <div class="list-group">
+                            <div class="list-group-item bg-transparent border-light d-flex justify-content-between align-items-center mb-2">
+                                <div>
+                                    <h5 class="mb-1">Suleman Aziz</h5>
+                                    <small>May 21, 2025 - 09:30 AM</small>
+                                </div>
+                                <span class="badge bg-info">Current</span>
+                            </div>
+                            <div class="list-group-item bg-transparent border-light d-flex justify-content-between align-items-center mb-2">
+                                <div>
+                                    <h5 class="mb-1">Abdul Wahab</h5>
+                                    <small>May 21, 2025 - 08:45 AM</small>
+                                </div>
+                                <span class="badge bg-secondary">Logged Out</span>
+                            </div>
+                            <div class="list-group-item bg-transparent border-light d-flex justify-content-between align-items-center mb-2">
+                                <div>
+                                    <h5 class="mb-1">Suleman Aziz</h5>
+                                    <small>May 20, 2025 - 05:15 PM</small>
+                                </div>
+                                <span class="badge bg-secondary">Logged Out</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <div>
-        <h1>Login History</h1>
-        <ol>
-            
-        </ol>
-    </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
