--- a/web_pages/Allocate budget.html
+++ b/web_pages/Allocate budget.html
@@ -3,32 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Budget Allocation</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <form>
-         <label>Running Balance:</label> <br> <br>
-        <label for="budget"> Allocate  yearly budget:</label>
-        <input type="number" id="budget" name="budget" required>
-        <button type="submit">Submit</button> <br> <br>
-         <br> <br>
-        <label for="monthly_budget">Monthly budget</label>
-        <input type="number" id="monthly_budget" name="monthly_budget" required>
-        <button type="submit">Submit</button> <br> <br>
-        <br> <br>
-        <label for="weekly_budget">Weekly budget</label>
-        <input type="number" id="weekly_budget" name="weekly_budget" required>
-        <button type="submit">Submit</button> <br> <br>
-        <br> <br>
-        <label for="credit_saving">Credit saving account </label>
-        <input type="number" id="credit_saving" name="credit_saving" required>
-        <button type="submit">Submit</button> <br> <br>
-        <label>Total saving </label>
-        <div>
-            
+    <div class="container py-4">
+        <div class="row">
+            <div class="col-md-8 mx-auto">
+                <div class="card bg-transparent border-light">
+                    <div class="card-body">
+                        <h3 class="card-title text-center mb-4">Budget Allocation</h3>
+                        <form>
+                            <!-- Running Balance Display -->
+                            <div class="mb-4">
+                                <h4 class="text-center">Running Balance: <span class="badge bg-success">$5000</span></h4>
+                            </div>
+
+                            <!-- Yearly Budget -->
+                            <div class="mb-4">
+                                <label for="budget" class="form-label">Allocate yearly budget</label>
+                                <div class="input-group">
+                                    <input type="number" class="form-control" id="budget" name="budget" required>
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                </div>
+                            </div>
+
+                            <!-- Monthly Budget -->
+                            <div class="mb-4">
+                                <label for="monthly_budget" class="form-label">Monthly budget</label>
+                                <div class="input-group">
+                                    <input type="number" class="form-control" id="monthly_budget" name="monthly_budget" required>
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                </div>
+                            </div>
+
+                            <!-- Weekly Budget -->
+                            <div class="mb-4">
+                                <label for="weekly_budget" class="form-label">Weekly budget</label>
+                                <div class="input-group">
+                                    <input type="number" class="form-control" id="weekly_budget" name="weekly_budget" required>
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                </div>
+                            </div>
+
+                            <!-- Credit Savings -->
+                            <div class="mb-4">
+                                <label for="credit_saving" class="form-label">Credit saving account</label>
+                                <div class="input-group">
+                                    <input type="number" class="form-control" id="credit_saving" name="credit_saving" required>
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                </div>
+                            </div>
+
+                            <!-- Total Savings Display -->
+                            <div class="text-center">
+                                <h4>Total Savings: <span class="badge bg-primary">$2000</span></h4>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
 
-
-    </form>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
