--- a/web_pages/Profile.html
+++ b/web_pages/Profile.html
@@ -3,14 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Profile</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Account Creation: </h1>
-    <h1>Total Amount Spent: </h1>
-    <h1>Total Amount Credited: </h1>
-    <h1>Average Running Balance: </h1>
-    <h1>Highest Running Balance: </h1>
-    <button><h1>Logout</h1></button>
+    <div class="container py-4">
+        <div class="card bg-transparent border-light">
+            <div class="card-body">
+                <div class="row align-items-center mb-4">
+                    <div class="col-md-3 text-center">
+                        <img src="../Images/Profile.jpg" alt="Profile" class="rounded-circle img-fluid mb-3" 
+                             style="width: 200px; height: 200px; object-fit: cover;">
+                    </div>
+                    <div class="col-md-9">
+                        <div class="row g-4">
+                            <div class="col-md-6">
+                                <div class="card bg-transparent border-light h-100">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Account Details</h5>
+                                        <p class="mb-2">Account Creation: <span class="text-light">2024</span></p>
+                                        <p class="mb-2">Highest Running Balance: <span class="badge bg-success">$7,500</span></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="card bg-transparent border-light h-100">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Financial Overview</h5>
+                                        <p class="mb-2">Total Amount Spent: <span class="badge bg-danger">$3,200</span></p>
+                                        <p class="mb-2">Total Amount Credited: <span class="badge bg-success">$8,500</span></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="card bg-transparent border-light">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Balance History</h5>
+                                        <p class="mb-2">Average Running Balance: <span class="badge bg-info">$5,300</span></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="text-center">
+                    <button onclick="window.location.href='../index.html'" 
+                            class="btn btn-danger btn-lg">
+                        Logout
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
