--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>Login - Budget Tracker</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.cdnfonts.com/css/old-newspaper" rel="stylesheet">
 </head>
 <body>
     <div class="container min-vh-100 d-flex align-items-center justify-content-center">
         <div class="card p-4 shadow-lg" style="min-width: 300px;">
             <div class="card-body">
-                <h2 class="text-center mb-4">Login</h2>
+                <h2 class="text-center mb-4">Budget Tracker Login</h2>
                 <form>
                     <div class="mb-3">
                         <label for="username" class="form-label">Username</label>
