--- a/web_pages/Admin.html
+++ b/web_pages/Admin.html
@@ -6,6 +6,7 @@
     <title>Admin Panel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.cdnfonts.com/css/old-newspaper" rel="stylesheet">
 </head>
 <body>
     <div class="container-fluid py-4">
@@ -13,10 +14,11 @@
             <!-- Current Accounts Section -->
             <div class="col-md-6 mb-4">
                 <div class="card bg-transparent border-light h-100">
-                    <div class="card-body">
+                    <div class="card-body">                        <div class="prevPage">
+                            <img src="../Images/BookCorner_Flipped.jpg" onclick="window.location.href='HomePage.html'" alt="Previous Page">
+                        </div>
                         <h2 class="card-title text-center mb-4">Current Accounts</h2>
-                        <div class="list-group">
-                            <div class="list-group-item bg-transparent border-light d-flex justify-content-between align-items-center mb-2">
+                        <div class="list-group"><div class="list-group-item d-flex justify-content-between align-items-center mb-2">
                                 <div>
                                     <h5 class="mb-1">Suleman Aziz</h5>
                                     <small>Account Created: May 15, 2025</small>
@@ -43,8 +45,7 @@
             </div>
 
             <!-- Login History Section -->
-            <div class="col-md-6 mb-4">
-                <div class="card bg-transparent border-light h-100">
+            <div class="col-md-6 mb-4">                <div class="card h-100">
                     <div class="card-body">
                         <h2 class="card-title text-center mb-4">Login History</h2>
                         <div class="list-group">
