--- a/web_pages/Allocate budget.html
+++ b/web_pages/Allocate budget.html
@@ -6,13 +6,16 @@
     <title>Budget Allocation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.cdnfonts.com/css/old-newspaper" rel="stylesheet">
 </head>
 <body>
     <div class="container py-4">
         <div class="row">
-            <div class="col-md-8 mx-auto">
-                <div class="card bg-transparent border-light">
+            <div class="col-md-8 mx-auto"><div class="card">
                     <div class="card-body">
+                        <div class="prevPage">
+                            <img src="../Images/BookCorner_Flipped.jpg" onclick="window.location.href='HomePage.html'" alt="Previous Page">
+                        </div>
                         <h3 class="card-title text-center mb-4">Budget Allocation</h3>
                         <form>
                             <!-- Running Balance Display -->
