--- a/web_pages/Expenses.html
+++ b/web_pages/Expenses.html
@@ -6,6 +6,7 @@
     <title>Expenses Tracking</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.cdnfonts.com/css/old-newspaper" rel="stylesheet">
 </head>
 <body>
     <div class="container py-4">
@@ -24,9 +25,10 @@
 
         <!-- Expense Summary Cards -->
         <div class="row mb-4">
-            <div class="col-md-6 mx-auto">
-                <div class="card bg-transparent border-light">
-                    <div class="card-body">
+            <div class="col-md-6 mx-auto">                <div class="card">
+                    <div class="card-body">                        <div class="prevPage">
+                            <img src="../Images/BookCorner_Flipped.jpg" onclick="window.location.href='HomePage.html'" alt="Previous Page">
+                        </div>
                         <h4 class="card-title text-center mb-4">Total Expenses: $1,250</h4>
                         <div class="expense-summary">
                             <!-- Transport -->
