--- a/web_pages/HomePage.html
+++ b/web_pages/HomePage.html
@@ -6,28 +6,32 @@
     <title>HomePage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.cdnfonts.com/css/old-newspaper" rel="stylesheet">
 </head>
 <body>
-    <div class="container-fluid py-4">
+    <div class="container-fluid py-4" id="homePage">
         <div class="row">
         
             <div class="col-12 mb-4">
                 <div class="card">
                     <div class="card-body">
                         <div class="row align-items-center">
-                            <div class="col-md-2">
-                                <img src="../Images/Profile.jpg" alt="Profile" class="rounded-circle img-fluid mb-3" style="width: 150px; height: 150px; object-fit: cover;" onclick="window.location.href='Profile.html'" hover="cursor: pointer;">
+                            <div class="col-md-2" style="cursor: pointer;">
+                                <img src="../Images/Profile.jpg" alt="Profile" class="rounded-circle img-fluid mb-3" style="width: 150px; height: 150px; object-fit: cover;" onclick="window.location.href='Profile.html'">
                             </div>
                             <div class="col-md-10">
+                                <div class="nextPage">
+                                <img src="../Images/BookCorner.jpg" onclick="window.location.href='Admin.html'" alt="Next Page">
+                                </div>
                                 <h2 class="card-title mb-4">Profile Information</h2>
                                 <div class="row">
                                     <div class="col-md-3">
                                         <p class="mb-2">Account Creation: <span class="text-light">2024</span></p>
-                                        <p class="mb-2">Total Amount Spent: <span class="badge bg-danger">$0</span></p>
+                                        <p class="mb-2">Total Amount Spent: <span class="badge bg-danger">$592</span></p>
                                     </div>
                                     <div class="col-md-3">
-                                        <p class="mb-2">Total Credited: <span class="badge bg-success">$0</span></p>
-                                        <p class="mb-2">Average Balance: <span class="badge bg-info">$0</span></p>
+                                        <p class="mb-2">Total Credited: <span class="badge bg-success">$5000</span></p>
+                                        <p class="mb-2">Average Balance: <span class="badge bg-info">$900</span></p>
                                     </div>
                                 </div>
                             </div>
@@ -43,10 +47,10 @@
                         <h2 class="card-title mb-4">Budget Overview</h2>
                         <div class="row">
                             <div class="col-md-6">
-                                <h3>Running Budget: <span class="badge bg-primary">$0</span></h3>
+                                <h3>Running Budget: <span class="badge bg-primary">$2000</span></h3>
                             </div>
                             <div class="col-md-6">
-                                <h3>Current Savings: <span class="badge bg-success">$0</span></h3>
+                                <h3>Current Savings: <span class="badge bg-success">$1000</span></h3>
                             </div>
                         </div>
                     </div>
@@ -80,12 +84,6 @@
             </div>
         </div>
     </div>
-
-
-    <div class="nextPage">
-        <img src="../Images/BookCorner.jpg" onclick="window.location.href='Admin.html'" alt="Next Page">
-    </div>
-
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
