--- a/web_pages/Profile.html
+++ b/web_pages/Profile.html
@@ -6,10 +6,10 @@
     <title>Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.cdnfonts.com/css/old-newspaper" rel="stylesheet">
 </head>
 <body>
-    <div class="container py-4">
-        <div class="card bg-transparent border-light">
+    <div class="container py-4">        <div class="card">
             <div class="card-body">
                 <div class="row align-items-center mb-4">
                     <div class="col-md-3 text-center">
@@ -18,17 +18,17 @@
                     </div>
                     <div class="col-md-9">
                         <div class="row g-4">
-                            <div class="col-md-6">
-                                <div class="card bg-transparent border-light h-100">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Account Details</h5>
-                                        <p class="mb-2">Account Creation: <span class="text-light">2024</span></p>
+                            <div class="col-md-6">                                <div class="card h-100">
+                                    <div class="card-body">                        <div class="prevPage">
+                            <img src="../Images/BookCorner_Flipped.jpg" onclick="window.location.href='HomePage.html'" alt="Previous Page">
+                        </div>
+                        <h5 class="card-title" style="text-align:center;">Account Details</h5>
+                        <p class="mb-2">Account Creation:<span class="text-light">2024</span></p>
                                         <p class="mb-2">Highest Running Balance: <span class="badge bg-success">$7,500</span></p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <div class="card bg-transparent border-light h-100">
+                            <div class="col-md-6">                                <div class="card h-100">
                                     <div class="card-body">
                                         <h5 class="card-title">Financial Overview</h5>
                                         <p class="mb-2">Total Amount Spent: <span class="badge bg-danger">$3,200</span></p>
@@ -36,8 +36,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12">
-                                <div class="card bg-transparent border-light">
+                            <div class="col-12">                                <div class="card">
                                     <div class="card-body">
                                         <h5 class="card-title">Balance History</h5>
                                         <p class="mb-2">Average Running Balance: <span class="badge bg-info">$5,300</span></p>
