--- a/web_pages/Transcation.html
+++ b/web_pages/Transcation.html
@@ -6,14 +6,16 @@
     <title>Transaction</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.cdnfonts.com/css/old-newspaper" rel="stylesheet">
 </head>
 <body>
     <div class="container py-4">
         <!-- Transaction Form -->
         <div class="row mb-4">
-            <div class="col-md-6 mx-auto">
-                <div class="card bg-transparent border-light">
-                    <div class="card-body">
+            <div class="col-md-6 mx-auto">                <div class="card">
+                    <div class="card-body">                        <div class="prevPage">
+                            <img src="../Images/BookCorner_Flipped.jpg" onclick="window.location.href='HomePage.html'" alt="Previous Page">
+                        </div>
                         <h3 class="card-title text-center mb-4">New Transaction</h3>
                         <form>
                             <div class="mb-3">
@@ -38,8 +40,7 @@
         <!-- Transaction Lists -->
         <div class="row">
             <!-- Credit Transactions -->
-            <div class="col-md-6 mb-4">
-                <div class="card bg-transparent border-light">
+            <div class="col-md-6 mb-4">                <div class="card">
                     <div class="card-body">
                         <h4 class="card-title text-center mb-4">Credit History</h4>
                         <div class="list-group">
@@ -63,8 +64,7 @@
             </div>
 
             <!-- Debit Transactions -->
-            <div class="col-md-6 mb-4">
-                <div class="card bg-transparent border-light">
+            <div class="col-md-6 mb-4">                <div class="card">
                     <div class="card-body">
                         <h4 class="card-title text-center mb-4">Debit History</h4>
                         <div class="list-group">
