connecting with database

--- a/web_pages/Admin.html
+++ b/web_pages/Admin.html
@@ -15,7 +15,7 @@
             <div class="col-md-6 mb-4">
                 <div class="card bg-transparent border-light h-100">
                     <div class="card-body">                        <div class="prevPage">
-                            <img src="../Images/BookCorner_Flipped.jpg" onclick="window.location.href='HomePage.html'" alt="Previous Page">
+                            <img src="../Images/BookCorner_Flipped.jpg" onclick="window.location.href='HomePage.php'" alt="Previous Page">
                         </div>
                         <h2 class="card-title text-center mb-4">Current Accounts</h2>
                         <div class="list-group"><div class="list-group-item d-flex justify-content-between align-items-center mb-2">
